--- a/style.css
+++ b/style.css
@@ -195,26 +195,24 @@ body {
   position: absolute;
   width: 30px;
   height: 50px;
-  top: 53px;
+  top: 180px;
+  left: 80px;
   border-radius: 5px 40px 20px 40px;
   background: #054c05;
   transform-origin: bottom;
   transform: rotate(-30deg);
-  top: 180px;
-  left: 80px;
   box-shadow: inset 5px 5px #066406;
 }
 .leaves > div:nth-child(3) {
   position: absolute;
   width: 30px;
   height: 50px;
-  top: 53px;
+  top: 150px;
+  left: 95px;
   border-radius: 40px 5px 40px 20px;
   background: #054c05;
   transform-origin: bottom;
   transform: rotate(30deg);
-  top: 150px;
-  left: 95px;
   box-shadow: inset -5px 5px #066406;
 }
 
@@ -246,6 +244,7 @@ body {
   top: 230px;
 }
 
+/* Keyframes */
 @keyframes bloom2 {
   50% {
     transform: rotate(-90deg);
@@ -301,7 +300,9 @@ body {
     top: 335px;
     opacity: 0;
   }
-	
+}
+
+/* Music Button (Dipindah ke luar dari keyframes) */
 #musicBtn {
   position: fixed;
   bottom: 20px;
@@ -321,4 +322,4 @@ body {
 #musicBtn:hover {
   background: #b8214a;
 }
-}
+
